@@ -9,7 +9,9 @@ software-store (0.1.3) karmic; urgency=low
     - add launchpad integration help (if available)
   * softwarestore/view/viewswitcher.py:
     - reconnect to the daemon if it dies (e.g. because of
-      inactivity)
+      inactivity) LP: #420124
+  * softwarestore/view/appdetailsview.py:
+    - show number of installed dependencies in the description
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 17:40:09 +0200
 
